# ExoSmooth

./: README.md  pyproject.toml
Code/: ExoSmooth.ipynb
Development/Code/: XSEC_OH_X_1_100K.xsec
Development/PackageDev/: fds.ipynb  smooth_tests.ipynb
Development/exosmooth/: exosmooth.py
exosmooth/: FDS.py  __init__.py  exosmooth.py  pyproject.toml
