[tool.poetry]
name = "exosmooth"
version = "0.1.0"
description = ""
authors = ["GBMitev <georgibogdanovmitev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
numpy = "1.22.4"
matplotlib = "3.8.3"
tqdm = "4.66.1"
scipy = "1.12.0"
scikit-learn = "1.2.1"
pandarallel = "1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
